# MmrService

./: .gitignore  README.md
code/: CMakeLists.txt
code/cmakeModules/: MacroBuildApp.cmake  MacroBuildComponent.cmake  MacroBuildSharedLib.cmake  MacroBuildToolPlugin.cmake  MacroUtil.cmake
code/common/: CMakeLists.txt
code/common/include/: CTypeInfo.hpp  Common_def.h  NonCopyable.h  SqliteCom.h
code/common/include/general/: Noncopyable.hpp  NullParameter.h  PolicyContainer.h  PolicyMicroBegin.h  PolicyMicroEnd.h  PolicySelector.hpp  Singleton.hpp  SqliteCom.h  TypeInfo.hpp  TypeOperator.hpp  TypeTraits.h  VarTypeDict.hpp
code/common/include/libnet/: hexport.h
code/common/include/libnet/base/: array.h  hatomic.h  hbase.h  hbuf.h  hdef.h  hendian.h  herr.h  hlog.h  hmain.h  hmutex.h  hplatform.h  hproc.h  hsocket.h  hsysinfo.h  hthread.h  htime.h  hversion.h  netinet.h  queue.h
code/common/include/libnet/cppnet/: Buffer.h  Channel.h  Event.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  TcpClient.h  TcpServer.h  TimerThread.h  UdpClient.h  UdpServer.h
code/common/include/libnet/cpputil/: ThreadLocalStorage.h  hasync.h  hdir.h  hfile.h  hmap.h  hpath.h  hscope.h  hstring.h  hurl.h  ifconfig.h  iniparser.h
code/common/include/libnet/event/: hevent.h  hloop.h  iowatcher.h  nlog.h  overlapio.h  rudp.h  unpack.h
code/common/include/libnet/event/kcp/: hkcp.h
code/common/include/libnet/http/: Http1Parser.h  Http2Parser.h  HttpMessage.h  HttpParser.h  WebSocketChannel.h  WebSocketParser.h  http_content.h  http_parser.h  httpdef.h  wsdef.h
code/common/include/libnet/http/client/: AsyncHttpClient.h  HttpClient.h  WebSocketClient.h  axios.h  requests.h
code/common/include/libnet/http/server/: FileCache.h  HttpContext.h  HttpHandler.h  (+6 more)
code/common/include/libnet/ssl/: hssl.h
code/common/include/libnet/util/: base64.h  md5.h  sha1.h
code/common/include/mmrNet/: Buffer.hpp  Channel.hpp  MmrNetExport.h  Socket.hpp
code/common/include/protoBase/: ProtoCodec.hpp  ProtoMsgCallback.h  ProtobufDef.h
code/common/include/util/: BufConvert.h  CDataStream.hpp  CLicenseObj.h  CLockFreeStack.hpp  CMatrix.h  CThreadpool.h  CVarDatas.hpp  ChunkAllocator.h  Clogger.h  FileOperator.h  MakeShared.hpp  Matrix.h  MemoryPool.hpp  SamllAllocator.h  SmallAllocator.h  StdOptional.hpp  StdVariant.hpp  SteramBuffer.h  TimeCounter.hpp  UtilExport.h  UtilFunc.h  Variant.hpp  json.hpp
code/common/source/: CMakeLists.txt
code/common/source/libnet/: CMakeLists.txt
code/common/source/libnet/base/: hbase.c  herr.c  hlog.c  hmain.c  hsocket.c  htime.c  hversion.c  rbtree.c
code/common/source/libnet/cpputil/: RAII.cpp  ThreadLocalStorage.cpp  hasync.cpp  hdir.cpp  hpath.cpp  hstring.cpp  hurl.cpp  ifconfig.cpp  iniparser.cpp
code/common/source/libnet/event/: epoll.c  evport.c  hevent.c  hloop.c  iocp.c  kqueue.c  nio.c  nlog.c  noevent.c  overlapio.c  poll.c  rudp.c  select.c  unpack.c
code/common/source/libnet/http/: Http1Parser.cpp  Http2Parser.cpp  HttpMessage.cpp  HttpParser.cpp  WebSocketChannel.cpp  WebSocketParser.cpp  http_content.cpp  http_parser.c  httpdef.c  multipart_parser.c  websocket_parser.c  wsdef.c
code/common/source/libnet/ssl/: appletls.c  gnutls.c  hssl.c  mbedtls.c  nossl.c  openssl.c  wintls.c
code/common/source/libnet/util/: base64.c  md5.c  sha1.c
code/common/source/mmrNet/: Buffer.cpp  CMakeLists.txt  Socket.cpp
code/common/source/util/: BufConvert.cpp  CLicenseObj.cpp  CMakeLists.txt  CMatrix.cpp  CThreadpool.cpp  ChunkAllocator.cpp  Clogger.cpp  FileOperator.cpp  Matrix.cpp  SmallAllocator.cpp  SteramBuffer.cpp  UtilFunc.cpp
code/creo/: CMakeLists.txt
code/creo/ptcViewDemo/: CMakeLists.txt  QtPTCViewDemo.cpp
code/creo/ptcViewWidget/: CMakeLists.txt  PTCViewWidget.h
code/example/: CMakeLists.txt
code/example/exampleDealEvent/: CMakeLists.txt  main.cpp
code/example/exampleSerInterface/: CMakeLists.txt  main.cpp
code/example/testAllocator/: CMakeLists.txt  main.cpp
code/example/testDataStream/: CMakeLists.txt  main.cpp
code/example/testJson/: CMakeLists.txt  main.cpp
code/example/testLog/: CMakeLists.txt  main.cpp
code/example/testMatrix/: CMakeLists.txt  main.cpp
code/example/testSingleton/: CMakeLists.txt  main.cpp
code/example/testTheadpool/: CMakeLists.txt  main.cpp
code/example/testVarData/: CMakeLists.txt  main.cpp
code/protoBuf/generate/AuthorityManager/: Login.pb.cc  Login.pb.h
code/protoBuf/proto/AuthorityManager/: Login.proto
code/service/: CMakeLists.txt
code/service/app/: CMakeLists.txt
code/service/app/clientTestApp/: CMakeLists.txt  CProtoRpcClient.cpp  CProtoRpcClient.h  main.cpp
code/service/app/serviceApp/: CAppControler.cpp  CAppControler.h  CMakeLists.txt  main.cpp
code/service/compnets/: CMakeLists.txt
code/service/compnets/AppController/: CCmdService.cpp  CCmdService.h  CComponentActivator.cpp  CComponentActivator.h  CMakeLists.txt
code/service/compnets/AuthorityManager/: CAlthorityProcessor.cpp  CAlthorityProcessor.h  CComponentActivator.cpp  CComponentActivator.h  CMakeLists.txt  CUserDatabase.cpp  CUserDatabase.h
code/service/compnets/ComponentDemo/: CComponentActivator.cpp  CComponentActivator.h  CHandlerDemo.h  CHelloService.cpp  CHelloService.h  CMakeLists.txt
code/service/compnets/ProtoRpcServer/: CComponentActivator.cpp  CComponentActivator.h  CMakeLists.txt  CProtoServe.cpp  CProtoServer.h
code/service/core/: CMakeLists.txt
code/service/core/include/: CCompFramework.h  CLiceseCtrl.h  CLoggerCtrl.h  EventCallbacks.h  EventCtrlPolicies.h  ServiceCtrlPolicies.hpp
code/service/core/suorce/: CCompFramework.cpp  CLiceseCtrl.cpp  CLoggerCtrl.cpp  EventCallbacks.cpp  EventCtrlPolicies.cpp
code/service/interface/: ComponentExport.h  IComponent.h  IEventHandler.h
code/service/interface/iservice/: InterfaceCommon.h
code/service/interface/iservice/AppController/: ICmdService.h
code/service/interface/iservice/ComponentDemo/: IHelloService.h
code/service/interface/iservice/ProtoRpcServer/: IProtoRpcServer.h
code/test/: CMakeLists.txt
code/tools/: CMakeLists.txt
(+12 files in other folders)
